:bug: Delete z-index from in festivalcardmedium

--- a/src/components/FestivalCardMedium/FestivalCardMedium.module.css
+++ b/src/components/FestivalCardMedium/FestivalCardMedium.module.css
@@ -1,6 +1,5 @@
 .container {
-  width: 330px;
-  z-index: 1;
+  width: 21rem;
 }
 
 .wrapper {
